a3-Output/app-1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-dep
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: ghcr.io/denoslab/ensf400-sample-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
