a3-Output/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #info about deployment
  name: nginx-dep
  labels:
    app: nginx
spec:
  replicas: 5
  # label selector for service to recognize
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        # mounting for loadbalancer using configMap
        volumeMounts:
        - name: config-volume
          mountPath: etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: nginx-configmap
