a3-Output/app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3001
