a3-Output/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  # same label as containers in the deployment
  selector:
    app: nginx
